chore: clean and improve analytics tests
Signed-off-by: Michael Chekin <mchekin@gmail.com>